Update LockOnHandler.java